chromium scrollbar fix

--- a/input.scss
+++ b/input.scss
@@ -44,8 +44,7 @@ body {
 
 .terminal-input {
   display: flex;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 10px;
   align-items: center;
   .ps1 {
     color: #bda7fa;
